<resources>
    <string name="app_name">JobFinder</string>
    <string name="main">Главная</string>
    <string name="favourites">Избранное</string>
    <string name="team">Команда</string>
    <string name="job_search">Поиск вакансий</string>
    <string name="input_query">Введите запрос</string>
    <string name="worked_on_the_application">Над приложением работали</string>
    <string name="first_developer">givemesomecoffee</string>
    <string name="second_developer">Mysteri027</string>
    <string name="third_developer">kukidevs</string>
    <string name="fourth_developer">vaiwork</string>
    <string name="num_jobs_found_5_9">Найдено %1$d вакансий</string>
    <string name="num_jobs_found_1">Найдена %1$d вакансия</string>
    <string name="num_jobs_found_2_4">Найдено %1$d вакансии</string>
    <string name="no_jobs_found">Таких вакансий нет</string>
    <string name="empty_list">Список пуст</string>
    <string name="apply">Применить</string>
    <string name="reset">Сбросить</string>
    <string name="error_403">Ошибка авторизации</string>
    <string name="error_else">Произошла ошибка (%1$d)</string>
    <string name="no_salary">ЗП не указана</string>
    <string name="vacancy">Вакансия</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="contacts">Контакты</string>
    <string name="contact_person">Контактное лицо</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Телефон</string>
    <string name="similar_vacancies">Похожие вакансии</string>
    <string name="no_internet">Отсутствует подключение к интернету</string>
    <string name="salary_from">от %1$s</string>
    <string name="salary_to">до %1$s</string>
    <string name="choose">Выбрать</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="refresh">Обновить</string>
    <string name="select_application_to_send">"Выберите приложение для отправки"</string>
    <string name="list_empty">Список пуст</string>
</resources>